# claude-optimized-deployment

./: .editorconfig  .env.database.example  .env.development  .env.development.template  .env.example  .env.production  .env.production.template  .env.template  .flake8  .gitattributes  .gitconfig.recommended  .gitignore  .gitmessage  .lfsconfig  .mutmut.ini  =0.12.0  =1.3.0  =2.0.0  =3.7.0  =4.30.0  ACADEMIC_DATABASE_API_DOCUMENTATION.md  ACADEMIC_DATABASE_INTEGRATION_STRATEGY.md  ACADEMIC_INTEGRATION_IMPLEMENTATION_GUIDE.md  ACTUAL_BASH_GOD_STATUS_REPORT.md  ADDITIONAL_MCP_SECURITY_SERVERS_REPORT.md  ADVANCED_SECURITY_MITIGATION_MATRIX.md  AGENT_001_FIX_SUMMARY.md  AGENT_10_CIRCLE_OF_EXPERTS_FINAL_VALIDATION_REPORT.md  AGENT_10_COMPLETION_SUMMARY.md  AGENT_10_COMPREHENSIVE_PRODUCTION_READINESS_CERTIFICATION_REPORT.md  AGENT_10_COMPREHENSIVE_SECURITY_INTEGRATION_FINAL_ASSESSMENT_REPORT.md  AGENT_10_FINAL_DEPLOYMENT_REPORT.md  AGENT_10_FINAL_SECURITY_CONSOLIDATION_REPORT.md  AGENT_10_FINAL_VALIDATION_REPORT.md  AGENT_1_COMPREHENSIVE_MCP_SEARCH_SERVER_DISCOVERY_REPORT.md  AGENT_1_DEVELOPMENT_WORKFLOW_ANALYSIS.md  AGENT_1_MCP_LAUNCH_ORCHESTRATION_COMPLETE.md  AGENT_1_PHASE_1_META_ARCHITECTURE_SECURITY_ANALYSIS.md  AGENT_2_CORE_INFRASTRUCTURE_SECURITY_AUDIT_REPORT.md  AGENT_2_ENTERPRISE_SEARCH_MCP_COMPREHENSIVE_ASSESSMENT.md  (+902 more)
The Book Writer/academic_mcp_rust/: Cargo.toml
The Book Writer/academic_mcp_rust/src/: lib.rs
claude_palma_bridge/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
claude_palma_bridge/ai_docs/: mcp_servers.json
claude_palma_bridge/src/: agents.rs  bridge.rs  comms.rs  main.rs  memory.rs  scheduler.rs
containers/development/rust-precompile/: Cargo.toml
deploy-code-module/: COMPREHENSIVE_MODULE_ARCHITECTURE_MAPPING.md  Cargo.toml  DEPLOYMENT_EXCELLENCE_TRACKING_SYSTEM.md  DEPLOYMENT_FLOW.md  DEPLOYMENT_ORCHESTRATION_ANALYSIS_SUMMARY.md  DOCKER_INTEGRATION.md  INTEGRATION_GUIDE.md  MITIGATION_MATRIX.md  Makefile  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_EXCELLENCE_FRAMEWORK.md  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  deploy-code-test.yaml  deploy-code.yaml  deploy_code.py
deploy-code-module/src/: lib.rs  main.rs
deploy-code-module/src/config/: mod.rs
deploy-code-module/src/monitoring/: mod.rs
deploy-code-module/src/network/: mod.rs
deploy-code-module/src/orchestrator/: engine.rs  executor.rs  mod.rs  scheduler.rs
deploy-code-module/src/reliability/: mod.rs
deploy-code-module/src/resources/: mod.rs
deploy-code-module/src/services/: health_check.rs  lifecycle.rs  mod.rs  registry.rs
mcp_launcher_rust/: .env.mcp.example  Cargo.toml  META_TREE_MINDMAP.md  Makefile  README.md  demo.sh  run_v2_demo.sh
mcp_launcher_rust/examples/: README.md  actor_pattern_simple.rs  build_and_run.sh  mcp_v2_demo.rs
mcp_launcher_rust/src/: lib.rs  main.rs
mcp_learning_system/python_learning/: pyproject.toml  setup.py
mcp_learning_system/python_learning/mcp_learning/: core.py  metrics.py
mcp_learning_system/python_learning/test_env/: pyvenv.cfg
mcp_servers/templates/rust-server/: Cargo.toml
rust_core/: BORROW_CHECKER_FIX_SUMMARY.md  BUILD_SUCCESS_REPORT.md  CARGO_TOML_DEPENDENCIES_RESOLVED.md  COMPILATION_SUCCESS.md  CONTAINER_CLOUD_SECURITY_AUDIT_REPORT.md  CRITICAL_RUST_ERRORS_ANALYSIS.md  Cargo.toml  Cargo_minimal.toml  E0599_FIXES_SUMMARY.md  FFI_SECURITY_AUDIT_REPORT.md  MCP_LAUNCHER_INTEGRATION_SUMMARY.md  MCP_PROGRESS_TREE.md  MCP_REFACTOR_PLAN.md  MCP_RUST_COMPILATION_ERRORS.md  NETWORK_SECURITY_AUDIT_REPORT.md  ORCHESTRATION_README.md  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_5_MASTER_PLAN.md  PHASE_2_DAY_1_COMPLETE.md  RUST_MCP_MODULE_SECURITY_AUDIT.md  SYNTHEX_AGENT_10_ACTION_PLAN.md  SYNTHEX_BENCHMARK_GUIDE.md  SYNTHEX_COMPILATION_FIX_SUMMARY.md  ULTIMATE_MCP_RUST_SECURITY_ASSESSMENT.md  WARNING_FIX_SUMMARY.md  analyze_synthex_benchmarks.py  build.rs  coverage.sh  fix_all_warnings.py  fix_remaining_warnings.py  fix_warnings.sh  fix_warnings_manual.py  fix_warnings_targeted.py  load_testing_suite.py  performance_regression_suite.py  prime.md  run_benchmarks.sh  run_synthex_benchmarks.sh  tarpaulin.toml  (+2 more)
rust_core/.github/workflows/: coverage.yml
rust_core/ai_docs/: 03_SECURITY_PATTERNS_AND_FIXES.md  MCP_SECURITY_ARCHITECTURE.md  SECURITY_METRICS_DASHBOARD.md
rust_core/benches/: benchmark_report.rs  circle_of_experts_bench.rs  comprehensive_bench.rs  mcp_manager_bench.rs  mcp_manager_enhanced_bench.rs  optimization_benchmark.rs  orchestration_bench.rs  performance_benchmarks.rs  performance_dashboard.html  plugin_system_bench.rs  report_style.css  synthex_bench.rs  synthex_performance_bench.rs
rust_core/docs/: API_REFERENCE.md  ARCHITECTURE.md  INTEGRATION_GUIDE.md  PERFORMANCE_TUNING.md
rust_core/docs/api/: capabilities.md  mod.rs  plugin_trait.md  state_transfer_trait.md
rust_core/docs/guides/: migration_guide.md
rust_core/docs/tutorials/: advanced_plugin_patterns.md  building_first_plugin.md
rust_core/examples/: mcp_server_demo.rs  orchestration_demo.rs  quick_start.py  secure_ffi_refactoring.rs  test_synthex.rs
rust_core/fuzz/: Cargo.toml
rust_core/fuzz/fuzz_targets/: fuzz_actor_messages.rs  fuzz_command_parser.rs  fuzz_mcp_protocol.rs  fuzz_memory_operations.rs
rust_core/scripts/: run_mcp_tests.sh
rust_core/src/: adaptive_learning.rs  async_helpers.rs  ffi_security.rs  infrastructure.rs  lib.rs  lib_minimal.rs  lockfree_collections.rs  memory_mapped.rs  performance.rs  python_bindings.rs  security.rs  security_enhanced.rs  simd_ops.rs  test_bindings.rs  zero_copy_net.rs
rust_core/tests/: README.md  concurrent_operations_tests.rs  coverage_analysis.rs  ffi_security_tests.rs  hot_reload_tests.rs  integration_test_suite.rs  integration_tests.rs  mcp_manager_comprehensive_tests.rs  mcp_plugin_integration.rs  mcp_property_tests.rs  memory_tests.rs  orchestration_integration_test.rs  performance_comparison_test.py  property_based_tests.rs  property_tests.rs  synthex_performance_test.rs
security_backup_20250613_174137/rust_core/: Cargo.toml  comprehensive_performance_benchmark.py
(+3015 files in other folders)
