[workspace]
resolver = "2"
members = [
    "rust_core"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CODE Team"]
license = "MIT"
repository = "https://github.com/code-team/claude-optimized-deployment"

[workspace.dependencies]
# Core async runtime and HTTP
tokio = { version = "1.35", features = ["full", "tracing"] }
axum = { version = "0.7", features = ["macros", "json", "tower-log", "query"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "compression-br", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security
jsonwebtoken = "9.0"
argon2 = "0.5"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Python integration
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Performance
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

# Testing
mockall = "0.12"
proptest = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = true
debug = false
