[package]
name = "claude_palma_bridge"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Async runtime and core
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Web framework and networking
warp = "0.3"
reqwest = { version = "0.12", features = ["json"] }
bytes = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency and collections
dashmap = "6.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.10"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
blake3 = "1.5"

# NAM/ANAM support  
ndarray = "0.16"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
num-traits = "0.2"

# Logging (optional for this streamlined version)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
default = []
logging = ["tracing", "tracing-subscriber"]

[[bin]]
name = "bridge-server"
path = "src/main.rs"