[package]
name = "deploy-code"
version = "1.0.0"
edition = "2021"
authors = ["CODE Platform Team"]
description = "Bulletproof deployment orchestrator for CODE environment"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# Data structures and concurrency
dashmap = "6.1"
crossbeam = "0.8"
parking_lot = "0.12"
arc-swap = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling and logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Networking
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
hyper = { version = "1.5", features = ["full"] }
tower = "0.5"
prost = "0.13"
reqwest = { version = "0.12", features = ["json"] }

# CLI and configuration
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
config = "0.14"
dotenvy = "0.15"

# Metrics and monitoring
prometheus = { version = "0.13", features = ["process"] }
opentelemetry = "0.26"
opentelemetry-prometheus = "0.29"

# Process management
nix = { version = "0.29", features = ["process", "signal"] }
sysinfo = "0.32"
which = "7.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"
once_cell = "1.20"
regex = "1.11"
semver = "1.0"

# Testing
mockall = "0.13"
proptest = "1.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"
test-case = "3.3"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "deploy-code"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true