[package]
name = "code_rust_core"
version = "0.1.0"
edition = "2021"
authors = ["CODE Team"]
description = "High-performance Rust core for infrastructure operations"
license = "MIT"

[lib]
name = "claude_optimized_deployment_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python integration
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Performance
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Security
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
argon2 = "0.5"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

# Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
hyper = { version = "1.0", features = ["full"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math operations
nalgebra = "0.32"
ndarray = "0.15"

[dev-dependencies]
criterion = "0.6"
proptest = "1.4"

[features]
default = ["simd"]
simd = []
python = ["pyo3/extension-module"]

[[bench]]
name = "circle_of_experts_bench"
harness = false
