[package]
name = "code_rust_core"
version = "0.1.0"
edition = "2021"
authors = ["CODE Team"]
description = "High-performance Rust core for infrastructure operations"
license = "MIT"
build = "build.rs"

[lib]
name = "claude_optimized_deployment_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python integration
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Performance
rayon = "1.10"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.1"
memmap2 = { version = "0.9", features = ["stable_deref_trait"] }
lockfree = "0.5"
bytes = { version = "1.8", features = ["serde"] }

# SIMD optimizations
wide = { version = "0.7", optional = true }
prometheus-parse = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Security
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
argon2 = "0.5"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
lazy_static = "1.4"
once_cell = "1.19"
humantime = "2.1"
humantime-serde = "1.1"
dotenv = "0.15"
semver = { version = "1.0", features = ["serde"] }

# Networking
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.26", features = ["http2"] }
tonic = "0.10"
io-uring = { version = "0.6", optional = true }
socket2 = { version = "0.5", features = ["all"] }

# System info
num_cpus = "1.16"

# Utilities for orchestration
tokio-util = { version = "0.7", features = ["codec", "rt", "io"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math operations
nalgebra = "0.32"
ndarray = "0.15"
numpy = "0.20"

# Random number generation
rand = "0.8"

# Search functionality
tantivy = { version = "0.21", optional = true }
walkdir = "2.5"
grep = { version = "0.3", features = ["simd-accel"] }
scraper = "0.19"
ordered-float = "4.2"
bincode = "1.3"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
url = "2.5"
urlencoding = "2.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"], default-features = false }
async-trait = "0.1"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
lru = "0.12"
notify = "6.1"
tempfile = "3.10"

# Infrastructure server dependencies
bollard = "0.16"  # Docker API client
kube = { version = "0.88", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.21", features = ["latest"] }

# Encoding
base64 = "0.21"

# MCP Manager dependencies
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"
prost = "0.12"
# Consensus algorithms
raft = { version = "0.7", optional = true, default-features = false }
prometheus = { version = "0.13", default-features = false, features = ["process"] }
# Prometheus metrics without hyper dependency
libloading = "0.8"
glob = "0.3"
globset = "0.4"
http = "1.0"
jsonschema = "0.17"
schemars = { version = "0.8", features = ["derive", "uuid1", "chrono"] }

# Graph operations
petgraph = "0.6"

# Additional async utilities
async-channel = "2.1"
async-stream = "0.3"
pin-project = "1.1"
pin-project-lite = "0.2"

# Performance monitoring
perf-event = { version = "0.4", optional = true }
procfs = { version = "0.16", optional = true }

[build-dependencies]
pyo3-build-config = "0.20"

# Machine learning (optional)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }

# Command execution
shell-words = "1.1"
which = "6.0"

# Additional utilities
itertools = "0.12"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
derive_more = "0.99"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
rand = "0.8"
tokio-test = "0.4"
wiremock = "0.5"
indoc = "2.0"
serial_test = "3.0"
pretty_assertions = "1.4"

[features]
default = []
simd = ["dep:wide"]
python = ["pyo3/extension-module"]
testing = []
io-uring = ["dep:io-uring"]
linux-specific = ["perf-event", "procfs"]
search = ["tantivy"]
full = ["search"]
ml = ["candle-core", "candle-nn"]
consensus = ["raft"]

[[bench]]
name = "circle_of_experts_bench"
harness = false

[[bench]]
name = "mcp_manager_bench"
harness = false

[[bench]]
name = "plugin_system_bench"
harness = false

[[bench]]
name = "synthex_performance_bench"
harness = false

[[bench]]
name = "synthex_bench"
harness = false

[[bin]]
name = "mcp_launcher"
path = "src/bin/mcp_launcher.rs"

[[bin]]
name = "mcp_launcher_minimal"
path = "src/bin/mcp_launcher_minimal.rs"

[[bin]]
name = "mcp_launcher_standalone"
path = "src/bin/mcp_launcher_standalone.rs"

[[bin]]
name = "synthex_bashgod"
path = "src/bin/synthex_bashgod.rs"
required-features = ["full"]
