[package]
name = "academic_mcp_core"
version = "1.0.0"
edition = "2021"

[lib]
name = "academic_mcp"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.26", features = ["full"] }
pyo3 = { version = "0.19", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.17"
parking_lot = "0.12"
lru = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.pyo3-asyncio]
version = "0.19"
features = ["tokio-runtime"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
