[package]
name = "precompile"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-std = "1.12"

# Web frameworks
axum = "0.7"
warp = "0.3"
actix-web = "4.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
diesel = { version = "2.0", features = ["postgres"] }

# Crypto and security
ring = "0.17"
rustls = "0.21"
sha2 = "0.10"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance
rayon = "1.7"
crossbeam = "0.8"
dashmap = "5.4"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }