[package]
name = "template-mcp-server"
version = "1.0.0"
edition = "2021"
description = "A template MCP server demonstrating best practices in Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/your-username/template-mcp-server"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v1"] }

# HTTP client (for API calls)
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# System monitoring
sysinfo = "0.29"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"