[package]
name = "bash_god_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
anyhow = "1.0"
thiserror = "1.0"
crossbeam = "0.8"
dashmap = "5.5"
lru = "0.12"
regex = "1.10"
chrono = "0.4"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
which = "5.0"
shell-words = "1.1"
nix = "0.27"
libc = "0.2"
parking_lot = "0.12"
futures = "0.3"
once_cell = "1.19"
blake3 = "1.5"
sysinfo = "0.29"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module", "abi3-py39"]

[lib]
name = "bash_god_mcp"
crate-type = ["cdylib", "rlib"]

# Profile settings inherited from workspace