[package]
name = "development-mcp-server"
version = "0.1.0"
edition = "2021"

# Part of main workspace - no workspace declaration needed

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
rayon = "1.8"
crossbeam = "0.8"
bytes = "1.5"
mcp_rust_core = { path = "../../../rust_core" }
ahash = "0.8"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
mimalloc = { version = "0.1", default-features = false }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
lru = "0.12"
bincode = "1.3"
blake3 = "1.5"
uuid = { version = "1.7", features = ["v4"] }

[lib]
name = "development_mcp_server"
crate-type = ["cdylib", "rlib"]

# Profile settings inherited from workspace