[package]
name = "bash_god_mcp_server"
version = "1.0.0"
edition = "2021"
authors = ["Claude Code Team"]
description = "BASH_GOD MCP Server - Advanced Bash Command Intelligence"
license = "MIT"
repository = "https://github.com/claude-code/bash-god-mcp"
keywords = ["bash", "mcp", "command-generation", "optimization", "safety"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = ["rust_src"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Concurrency
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
futures = "0.3"

# Data structures
lru = "0.12"

# Text processing
regex = "1.10"

# Time
chrono = "0.4"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# System interaction
which = "5.0"
shell-words = "1.1"
nix = "0.27"
libc = "0.2"

# Utilities
once_cell = "1.19"
blake3 = "1.5"
bytes = "1.5"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py39"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true