[package]
name = "mcp-learning-core"
version = "0.1.0"
edition = "2021"
authors = ["MCP Learning System Team"]
description = "High-performance Rust core for MCP Learning System"
license = "MIT"

# Workspace members removed for standalone compilation

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Concurrency
dashmap = "6.0"
crossbeam = "0.8"
parking_lot = "0.12"
arc-swap = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.13"
prost-types = "0.13"

# Memory mapping
memmap2 = "0.9"
shared_memory = "0.12"

# Performance
ahash = "0.8"
smallvec = "1.13"
bytes = "1.7"

# Metrics
prometheus = "0.13"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tempfile = "3.12"
mock_instant = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true