[package]
name = "quality-mcp-server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
bytes = "1.4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.4"
parking_lot = "0.12"
regex = "1.8"
rayon = "1.7"
memmap2 = "0.5"
crossbeam = "0.8"
ahash = "0.8"
smallvec = "1.10"
once_cell = "1.18"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

# Testing specific
insta = "1.30"
criterion = "0.4"
proptest = "1.2"

# Code analysis
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Metrics and profiling
prometheus = "0.13"

[dev-dependencies]
mockall = "0.13"
test-case = "3.3"
pretty_assertions = "1.4"

[lib]
name = "quality_mcp_server"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "quality-server"
path = "src/bin/server.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true